--- a/styles/header.css
+++ b/styles/header.css
@@ -29,14 +29,39 @@
 
 }
 .custom-icon-color{
-  color: rgb(0, 71, 143);
+  color:rgb(0, 71, 143);
+ 
 }
+.cart-button{
+  position: relative;
+}
+.notification-icon-container{
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: -7px;
+  left: 14px;
+  background-color: red;
+  color: white;
+  padding-bottom: 2px;
+  
+  padding-top: 2px;
+  
+  border-radius: 10px;
+  font-family: Roboto,Arial;
+  font-size: 11px;
+}
+
 .custom-search-bar{
   height: 50%;
   border-radius: 25px;
   width: 50%;
   border-width: 1px;
+  border: solid;
+  border-width: 1px;
   border-color: rgb(242, 242, 242);
+  padding: 10px;
+  box-shadow: none;
   
 }
 
@@ -72,8 +97,9 @@
 }
 .custom-footer{
   width: 100%;
-  height: 300px;
+  height: fit-content;
   background-color: rgb(0, 71, 143);
   color: white;
+  text-align: center;
 
 }
